# magic-config

./: .env  .gitignore  .pypirc  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  README.rst  build.sh  magic.config  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.py 
.github/workflows/: publish.yml  python-package.yml
docs/source/: conf.py  index.rst
examples/: setup.py
magic_config/magic_config/: __init__.py  lib.py
src/: __init__.py
src/magic_config/: __init__.py  magicconfig.py
tests/: test_config.py  test_empty.py
