[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "magic-config"
version = "0.1.11"
authors = [
    { name = "Alexander Majorov", email = "alexander.majorov@gmail.com" },
]
description = "A simple library for easy handling of .env files and environment variables configurations"
readme = "README.md"
requires-python = ">=3.10.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/frontdevops/magic-config"
"Documentation" = "https://github.com/frontdevops/magic-config/blob/main/README.md"
"Bug Tracker" = "https://github.com/frontdevops/magic-config/issues"
