[metadata]
name = magic_config
author = Alexander Majorov
author_email = alexander.majorov@gmail.com
license='MIT',
description = Is a pretty simple library for working with configuration files based on the .env files and environment variables
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/frontdevops/magic-config
project_urls =
    Documentation: https://github.com/frontdevops/magic-config/blob/main/README.md
    Source: https://github.com/frontdevops/magic-config
    Bug Tracker: https://github.com/frontdevops/magic-config/issues

classifiers =
    Programming Language :: Python :: 3,
    License :: OSI Approved :: MIT License,
    Operating System :: OS Independent,
    Development Status :: 5 - Production/Stable,
    License :: OSI Approved :: MIT License,
    Programming Language :: Python :: 3.10.8,
    Programming Language :: Python :: 3.11,
    Topic :: Software Development :: Libraries :: Application Utilities,

[options]
package_dir =
    = magic_config
packages = find:
python_requires = >=3.10.8

[options.packages.find]
where = magic_config